on mobile view Fix

--- a/src/app/components/HomePage/HomePage.module.css
+++ b/src/app/components/HomePage/HomePage.module.css
@@ -1,7 +1,8 @@
 .container {
-  .heading {
-    padding: 20px 0px;
-  }
+  border: 1px solid red;
+  margin: 9rem 0px 0px 0px;
+  /* .heading {
+  } */
 
   .listItem {
     list-style: none;
